[package]
name = "WxDatViewerAutoExportRust"
version = "0.1.0"
edition = "2021"
links = "foo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "*"
chrono = "*"
mime_guess = "2.0.4"
glob = "0.3.1"
fwatcher = "*"
hotwatch = "0.5.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
winapi = "0.3.9"
fltk = { version = "1.4.12", features = ["fltk-bundled"] }
serde_json = "1.0.96"
regex = "1.7.3"
clipboard = "0.5"
fltk-table = "*"
winreg  = "0.50.0"
msgbox = "0.7.0"
magic-crypt = "3.1.12"
libloading = "*"
tray-item = "0.8.0"
libc = "*"
once_cell = "1.17.2"
lazy_static = "1.4.0"
fltk-theme = { path = "./src/fltk-theme-kiic" }


[build-dependencies]
fl2rust = "*"
winres = "0.1.12"
winapi = "0.3.9"
static_vcruntime = "2.0"



[target.'cfg(all(windows, target_env = "msvc"))']
rustflags = ["-C", "target-feature=+crt-static"]
#
#[target.x86_64-pc-windows-msvc]
#rustflags = ["-C", "target-feature=+crt-static"]

# [http]
# proxy = "host:port" 


# [profile.release]
# opt-level = 3 #优化级别
# debug = false #控制最终二进制文件输出的 debug 信息量
# split-debuginfo = '...'  # 用于决定输出的 debug 信息是存放在二进制可执行文件里还是邻近的文件中
# debug-assertions = false #会提供运行时的检查，该检查只能用于 debug 模式，原因是对于 release 来说，这种检查的成本较为高昂
# overflow-checks = false #当开启后，整数溢出会导致 panic
# lto = false #用于控制 -C lto 标志，而后者可以控制 LLVM 的链接时优化( link time optimizations )。通过对整个程序进行分析，并以增加链接时间为代价，LTO 可以生成更加优化的代码。
# panic = 'unwind'
# incremental = false #用于开启或关闭增量编译。开启增量编译时，rustc 会将必要的信息存放到硬盘中( target 目录中 )，当下次编译时，这些信息可以被复用以改善编译时间。
# codegen-units = 16 
# rpath = false


# [profile.dev]
# opt-level = 0 
# debug = true
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 256
# rpath = false


